--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="./Assinaturas Email.zip" class="btn-ass" download="true">Baixar arquivo</a>
+        <a href="./Assinaturas Email.zip" class="btn-ass" download>Baixar arquivo</a>
     </div>
 </body>
 </html>
